# CodexSlim

./: .gitignore  BENCHMARKS.md  LICENSE  README.md  SLIM.md  benchmark.py  bootstrap_codexslim.sh  pyproject.toml  setup.sh
codexslim/: __init__.py  cli.py
codexslim/core/: __init__.py  cache_manager.py  engine.py  tokenizer.py
codexslim/filters/: __init__.py  comment_pruner.py  skeletonizer.py
codexslim/parsers/: __init__.py  base_parser.py  dotnet_driver.py  go_driver.py  java_driver.py  python_driver.py  ruby_driver.py  rust_driver.py  web_driver.py
tests/: test_dotnet_parser.py  test_go_parser.py  test_java_parser.py  test_python_parser.py  test_ruby_parser.py  test_rust_parser.py  test_web_parser.py
