[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexslim"
version = "0.1.0"
description = "AI token-efficient codebase reduction for LLM agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10",
    "tiktoken>=0.7",
    "filelock>=3.13",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
slim = "codexslim.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codexslim*"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
